Update and rename 2018-06-11-activex_vs2017_컴파일_MIDL2311_오류.md to 2018-06-11-activex-vs2017-컴파일-MIDL2311-오류.md

--- a/_posts/2018-06-11-activex-vs2017-컴파일-MIDL2311-오류.md
+++ b/_posts/2018-06-11-activex-vs2017-컴파일-MIDL2311-오류.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+title: activex vs2017_컴파일_MIDL2311_오류
 author: danny Kim
 tags:	visual studio 2017 compile
 ---
@@ -8,9 +9,9 @@ tags:	visual studio 2017 compile
 `Visual Studio 2017`에서 모든 컴파일을 진행하려고 하고 있습니다.
 
 그러던 중 `activex` 프로젝트를 컴파일 할 때 아래와 같은 에러를 만났습니다.
-
+```
 error MIDL2311: statements outside library block are illegal in mktyplib compatability mode : [ ]
-
+```
 아래 소스 처럼 #include 가 library TAG 밖에 있는데
 {% highlight c++ %}
 #include <olectl.h>
