포스트 내용 수정

--- a/_posts/2018-12-20-Mingw_설치_시_32_64_구분_및_설치_경로.md
+++ b/_posts/2018-12-20-Mingw_설치_시_32_64_구분_및_설치_경로.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 author: danny Kim
-title: "안드로이드 USB 디버깅이 안될 때"
-category: "android"
-tags: android mobile debug
+title: "Mingw 설치 시 32 64 구분 및 설치 경로"
+category: "cpp"
+tags: c mingw 32 64
 ---
 
-안드로이드 단말기를 USB로 연결해서 디버깅 하려고 할 때
-어떻게 해도 연결이 안되는 경우가 있다.
-이럴 경우에 USB 모드를 MTP에서 PTP로 변경하면 된다.
-핸드폰 USB 연결 시마다 기본적으로 MTP로 연결되는 단말기들이 있으므로
-그 때마다 변경하면 문제없이 디버깅을 진행 할 수 있다.
+Mingw 설치 후 사용하려고 하면 32비트와 64비트를 잘 구분해줘야하는데
+우선 Mingw 설치 시 부터 32비트인지 64비트인지 결정하게 되어 있다.
+32비트의 경우 Program Files(x86) 안에 들어가 있고 64비트의 경우 Program Files 안에 설치가 된다.
+사용하는 프로그램에서 해당 경로의 bin 을 path 로 잡고 사용해야
+원하는 bit의 mingw 컴파일을 진행 할 수 있다.
