잘못된 이미지 경로 수정

--- a/_posts/2020-12-21-vscode에서_찾기에서_유용한_정규식_목록.md
+++ b/_posts/2020-12-21-vscode에서_찾기에서_유용한_정규식_목록.md
@@ -9,7 +9,7 @@ tags: vscode visualstudiocode regex 정규식
 vscode에서 로그등을 분석할 시 유요한 정규식이 있다.
 
 우선은 정규화 활성화를 해주고
-![정규식활성화]](https://github.com/crykiss/crykiss.github.io/blob/master/assets/images/vscode정규식위치.png?raw=true)
+![정규식활성화](https://github.com/crykiss/crykiss.github.io/blob/master/assets/images/vscode정규식위치.png?raw=true)
 
 특정 단어가 포함된 행 선택
 
